tests/invalid_nodepend/invalid_octal_literal.err_exp
invalid_octal_literal.m:012: Error: no clauses for function `foo1'/0.
invalid_octal_literal.m:013: Error: no clauses for function `foo2'/0.
invalid_octal_literal.m:014: Error: no clauses for function `foo3'/0.
invalid_octal_literal.m:015: Error: no clauses for function `foo4'/0.
invalid_octal_literal.m:016: Error: no clauses for function `foo5'/0.
invalid_octal_literal.m:017: Error: no clauses for function `foo6'/0.
invalid_octal_literal.m:018: Error: no clauses for function `foo7'/0.
invalid_octal_literal.m:019: Error: no clauses for function `foo8'/0.
invalid_octal_literal.m:023: Syntax error at token `. ': unexpected token at
invalid_octal_literal.m:023:   start of (sub)term.
invalid_octal_literal.m:023: Syntax error: 0o is not followed by octal digits.
invalid_octal_literal.m:025: Syntax error at token `. ': unexpected token at
invalid_octal_literal.m:025:   start of (sub)term.
invalid_octal_literal.m:025: Syntax error: 0o is not followed by octal digits.
invalid_octal_literal.m:027: Syntax error at token `. ': unexpected token at
invalid_octal_literal.m:027:   start of (sub)term.
invalid_octal_literal.m:027: Syntax error: 0o is not followed by octal digits.
invalid_octal_literal.m:029: Syntax error at token `. ': unexpected token at
invalid_octal_literal.m:029:   start of (sub)term.
invalid_octal_literal.m:029: Syntax error: 0o is not followed by octal digits.
invalid_octal_literal.m:031: Syntax error at token `. ': unexpected token at
invalid_octal_literal.m:031:   start of (sub)term.
invalid_octal_literal.m:031: Syntax error: an octal literal cannot end with an
invalid_octal_literal.m:031:   underscore.
invalid_octal_literal.m:033: Syntax error at token `. ': unexpected token at
invalid_octal_literal.m:033:   start of (sub)term.
invalid_octal_literal.m:033: Syntax error: an octal literal cannot end with an
invalid_octal_literal.m:033:   underscore.
invalid_octal_literal.m:035: Error: clause for predicate `o77'/0
invalid_octal_literal.m:035:   without corresponding `:- pred' declaration.
invalid_octal_literal.m:035: Inferred :- pred o77.
invalid_octal_literal.m:035: Syntax error: a decimal literal cannot end with an
invalid_octal_literal.m:035:   underscore.
invalid_octal_literal.m:037: Syntax error: a decimal literal cannot end with an
invalid_octal_literal.m:037:   underscore.
